Added a short paragraph

--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <H1>Har versionshanterat en gång iallafall!</H1>
-    
+    <P>En kort beskrivning över ingenting.</P>
 </body>
 </html>
